--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -39,13 +39,13 @@
   journal ="EECS Department, University of California, Berkeley, Tech. Rep. UCB/EECS-2014-146",
   year    ="2014"
 }
-@article{riscv_priviledge,
+@article{riscv_privilege,
   title={The RISC-V instruction set manual volume II: Privileged architecture version 1.9},
   author={Waterman, Andrew and Lee, Yunsup and Avizienis, Rimas and Patterson, David A and Asanovic, Krste},
   journal={EECS Department, University of California, Berkeley, Tech. Rep. UCB/EECS-2016-129},
   year={2016}
 }
-@article{riscv_unpriviledge,
+@article{riscv_unprivilege,
   title={The RISC-V instruction set manual},
   author={Waterman, Andrew and Lee, Yunsup and Patterson, David and Asanovic, Krste and level Isa, Volume I User and Waterman, Andrew and Lee, Yunsup and Patterson, David},
   journal={Volume I: User-Level ISA, version},
