--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -24,9 +24,9 @@
 \newacronym{clint}{CLINT}{Core-local Interrupt Controller}
 \newacronym{isa}{ISA}{Instruction set architecture}
 \newacronym{machine}{M}{Machine}
-\newacronym{user}{U}{User}
+\newacronym{user}{U}{User/Application}
 \newacronym{supervisor}{S}{Supervisor}
-\newacronym{csr}{CSR}{Control and status register}
+\newacronym{csr}{CSR}{Control and Status Register}
 \newacronym{ooo}{OoO}{Out-of-Order}
 \newacronym{os}{OS}{Operating System}
 \newacronym{hdl}{HDL}{Hardware Description Language}
@@ -65,3 +65,8 @@
 \newacronym{dtc}{DTC}{Device Tree Compiler}
 \newacronym{dts}{DTS}{Device Tree Source}
 \newacronym{dtb}{DTB}{Device Tree Blob}
+
+%Appendix
+\newacronym{srw}{SRW}{Supervisor Read and Write}
+\newacronym{mro}{MRO}{Machine Read Only}
+\newacronym{mrw}{MRW}{Machine Read and Write}
