--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -16,6 +16,11 @@
 \newacronym{pci}{PCI}{Peripheral Component Interconnect}
 \newacronym{risc}{RISC}{Reduced Instruction Set Computer}
 \newacronym{cisc}{CISC}{Complex Instruction Set Computer}
+\newacronym{rv32i}{RV32I}{32-bit Base Integer Instruction Set}
+\newacronym{rv_m}{M}{Standard Extension for Integer Multiplication and Division}
+\newacronym{rv_a}{A}{Standard Extension for Atomic Instructions}
+\newacronym{rv_c}{C}{Standard Extension for Compressed Instructions}
+\newacronym{rv_csr}{Zicsr}{Control and Status Register (CSR) Instructions}
 
 %CH3
 \newacronym{cpu}{CPU}{Central Processing Unit}
