--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -51,8 +51,8 @@
 \newacronym{amo}{AMO}{Atomic Memory Operations}
 \newacronym{pc}{PC}{Program counter}
 \newacronym{fpu}{FPU}{floating-point unit}
-\newacronym{alu}{ALU}{arithmetic logic unit}
-\newacronym{rtc}{rtc}{arithmetic logic unit}
+\newacronym{alu}{ALU}{Arithmetic Logic Unit}
+\newacronym{rtc}{rtc}{real time clock}
 %\newacronym{gpio}{GPIO}{General Purpose Input/Output}
 
 %CH4
