--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -4,6 +4,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % References
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%CH1
+@article{barry2008freertos,
+  title={FreeRTOS},
+  author={Barry, Richard and others},
+  journal={Internet, Oct},
+  year={2008}
+}
+
 
 %CH2
 @online{iob_soc,
