--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -1,3 +1,6 @@
+%CH1
+\newacronym{rtos}{RTOS}{Real-Time Operating Systems}
+
 %CH2
 \newacronym{MSB}{MSB}{Most Significant Byte}
 \newacronym{LSB}{LSB}{Less Significant Byte}
