--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -5,6 +5,12 @@
 % References
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %CH1
+@article{torvalds1997linux,
+  title={Linux: a portable operating system},
+  author={Torvalds, Linus},
+  journal={Master's thesis, University of Helsinki, dept. of Computing Science},
+  year={1997}
+}
 @article{barry2008freertos,
   title={FreeRTOS},
   author={Barry, Richard and others},
