--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -41,7 +41,7 @@
 \newacronym{mmu}{MMU}{Memory Management Unit}
 \newacronym{chisel}{Chisel}{Constructing Hardware in a Scala Embedded Language}
 \newacronym{rtl}{RTL}{register-transfer level}
-\newacronym{fpga}{FPGA}{Field-programmable gate array}
+\newacronym{fpga}{FPGA}{field-programmable gate array}
 \newacronym{asic}{ASIC}{Application-Specific Integrated Circuit}
 \newacronym{uut}{UUT}{Unit Under Test}
 \newacronym{uart}{UART}{Universal asynchronous receiver/transmitter}
