--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -74,6 +74,10 @@
 \newacronym{dts}{DTS}{Device Tree Source}
 \newacronym{dtb}{DTB}{Device Tree Blob}
 
+%CH6
+\newacronym{spi}{SPI}{Serial Peripheral Interface}
+\newacronym{dma}{DMA}{Direct Access Media}
+
 %Appendix
 \newacronym{srw}{SRW}{Supervisor Read and Write}
 \newacronym{mro}{MRO}{Machine Read Only}
