--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -382,4 +382,12 @@ keywords = {manycore, multicore, open-source},
   volume={2012},
   year={2012}
 }
+
+%CH6
+@online{open_crypto_hw,
+	author    = "Pedro Miranda",
+	title     = "IOb-SoC-openCryptoHW",
+	url       = "https://github.com/IObundle/iob-soc-opencryptohw",
+  keywords  = "iob-soc,riscv"
+}
 @Comment{jabref-meta: databaseType:biblatex;}
