--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -82,3 +82,5 @@
 \newacronym{srw}{SRW}{Supervisor Read and Write}
 \newacronym{mro}{MRO}{Machine Read Only}
 \newacronym{mrw}{MRW}{Machine Read and Write}
+\newacronym{iot}{IoT}{Internet of Things}
+\newacronym{cgras}{CGRAS}{Coarse-Grained Reconfigurable Arrays}
