--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -385,7 +385,7 @@ keywords = {manycore, multicore, open-source},
 
 %CH6
 @online{open_crypto_hw,
-	author    = "Pedro Miranda",
+	author    = "IObundle Lda",
 	title     = "IOb-SoC-openCryptoHW",
 	url       = "https://github.com/IObundle/iob-soc-opencryptohw",
   keywords  = "iob-soc,riscv"
