Update project results with more juice;

--- a/sources/literature.bib
+++ b/sources/literature.bib
@@ -383,6 +383,34 @@ keywords = {manycore, multicore, open-source},
   year={2012}
 }
 
+%CH5
+@book{tollervey2017programming,
+  title={Programming with MicroPython: embedded programming with microcontrollers and Python},
+  author={Tollervey, Nicholas H},
+  year={2017},
+  publisher={" O'Reilly Media, Inc."}
+}
+@article{weicker1984dhrystone,
+  title={Dhrystone: a synthetic systems programming benchmark},
+  author={Weicker, Reinhold P},
+  journal={Communications of the ACM},
+  volume={27},
+  number={10},
+  pages={1013--1030},
+  year={1984},
+  publisher={ACM New York, NY, USA}
+}
+@article{emer1984characterization,
+  title={A Characterization of Processor Performance in the VAX-11/780},
+  author={Emer, Joel S and Clark, Douglas W},
+  journal={ACM SIGARCH Computer Architecture News},
+  volume={12},
+  number={3},
+  pages={301--310},
+  year={1984},
+  publisher={ACM New York, NY, USA}
+}
+
 %CH6
 @online{open_crypto_hw,
 	author    = "IObundle Lda",
