Deleted duplicated thesis files;

--- a/Extended_Abstract/ExtendedAbstract.tex
+++ b/Extended_Abstract/ExtendedAbstract.tex
@@ -161,7 +161,7 @@
 % REFERENCES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \bibliographystyle{abbrv}
-\bibliography{ExtendedAbstract_ref_db}
+\bibliography{../sources/literature}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
