--- a/Extended_Abstract/ExtendedAbstract_backg.tex
+++ b/Extended_Abstract/ExtendedAbstract_backg.tex
@@ -28,7 +28,7 @@ Figure \ref{fig:bd_original} represents a sketch of the SoC design. This design 
 
 \begin{figure}[!ht]
   \centering
-  \includegraphics[width=\linewidth]{images/bd_original.pdf}
+  \includegraphics[width=\linewidth]{../images/bd_original.pdf}
   \caption{\textit{IOb-SoC} sketch.}
   \label{fig:bd_original}
 \end{figure}
