Update extended abstract;

--- a/Extended_Abstract/ExtendedAbstract_backg.tex
+++ b/Extended_Abstract/ExtendedAbstract_backg.tex
@@ -40,3 +40,7 @@ Building a new processor-based system from scratch can take time and effort. The
 \subsection{Sub-section...}
 
 More text...
+
+\section{Existing Embedded Technologies}
+\label{sec:existing_embedded_technologies}
+There already exists embedded microcontrollers capable of running Linux. Big companies, for example, Arm Holdings (Arm ®), Qualcomm, MediaTek, Intel and AMD, have created microcontrollers capable of running Linux. However, the processor architecture of those microcontrollers is not open-source, much less the microcontroller itself.
