--- a/sources/acronyms.tex
+++ b/sources/acronyms.tex
@@ -2,6 +2,10 @@
 \newacronym{rtos}{RTOS}{Real-Time Operating Systems}
 
 %CH2
+\newacronym{demux}{DEMUX}{demultiplexer}
+\newacronym{mux}{MUX}{multiplexer}
+\newacronym{msb}{msb}{Most Significant bit}
+\newacronym{lsb}{lsb}{Less Significant bit}
 \newacronym{MSB}{MSB}{Most Significant Byte}
 \newacronym{LSB}{LSB}{Less Significant Byte}
 \newacronym{rbr}{RBR}{Receiver Buffer Register}
@@ -45,10 +49,6 @@
 \newacronym{asic}{ASIC}{Application-Specific Integrated Circuit}
 \newacronym{uut}{UUT}{Unit Under Test}
 \newacronym{uart}{UART}{Universal asynchronous receiver/transmitter}
-\newacronym{msb}{msb}{Most Significant bit}
-\newacronym{lsb}{lsb}{Less Significant bit}
-\newacronym{demux}{DEMUX}{desmultiplexer}
-\newacronym{mux}{MUX}{multiplexer}
 \newacronym{lr}{LR}{Load-Reserved}
 \newacronym{sc}{SC}{Store-Conditional}
 \newacronym{amo}{AMO}{Atomic Memory Operations}
