--- a/Extended_Abstract/ExtendedAbstract.tex
+++ b/Extended_Abstract/ExtendedAbstract.tex
@@ -152,7 +152,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{chapters/ExtendedAbstract_intro}
 \input{chapters/ExtendedAbstract_backg}
-\input{ExtendedAbstract_imple}
+\input{chapters/ExtendedAbstract_imple}
 \input{chapters/ExtendedAbstract_Results.tex}
 \input{chapters/ExtendedAbstract_concl}
 \input{chapters/ExtendedAbstract_ackno}
