Add declaration and fix numbering;

--- a/settings/listings.tex
+++ b/settings/listings.tex
@@ -7,7 +7,7 @@
 \definecolor{backcolour}{rgb}{0.95,0.95,0.92}
 
 % name of listings in the toc
-\renewcommand\lstlistlistingname{List of Code}
+\renewcommand\lstlistlistingname{Code Listings}
 
 \lstdefinestyle{mystyle}{
     backgroundcolor=\color{backcolour},   
