--- a/settings/layout.tex
+++ b/settings/layout.tex
@@ -8,6 +8,7 @@
 \ohead{\headmark} % name of the current section
 \ihead{}
 \ofoot{\thepage} % page number
+%\cfoot{} % center page number
 
 % footnote gap
 \addtolength{\skip\footins}{1ex}
