Final fixes; se deus quiser

--- a/settings/commands.tex
+++ b/settings/commands.tex
@@ -20,7 +20,7 @@
 \newcommand{\coverMemberCommittee}{@undefined} % new LaTeX variable name
 % > English
 \addto\captionsenglish{\renewcommand{\coverThesis}{Thesis to obtain the Master of Science Degree in}}
-\addto\captionsenglish{\renewcommand{\coverSupervisors}{Supervisor(s)}}
+\addto\captionsenglish{\renewcommand{\coverSupervisors}{Supervisor}}
 \addto\captionsenglish{\renewcommand{\coverExaminationCommittee}{Examination Committee}}
 \addto\captionsenglish{\renewcommand{\coverChairperson}{Chairperson}}
 \addto\captionsenglish{\renewcommand{\coverSupervisor}{Supervisor}}
